// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render List with default properties 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ul
      class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu erLmOF"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  bALAZM"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx gXoKZy"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(214, 18%, 69%, 1)"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <ul
            class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
            data-blade-component="list"
            role="list"
          >
            <li
              class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
              data-blade-component="list-item"
            >
              <div
                class="BaseBox-bmPWx dKbTtw"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx gXoKZy"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(214, 18%, 69%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class="BaseBox-bmPWx"
                data-blade-component="base-box"
              >
                <ul
                  class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
                    data-blade-component="list-item"
                  >
                    <div
                      class="BaseBox-bmPWx dKbTtw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx gXoKZy"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(214, 18%, 69%, 1)"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="StyledBaseText-dVBfTO eIdQFo"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render List with inline ListItemCode 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ul
      class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu erLmOF"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  bALAZM"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx gXoKZy"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(214, 18%, 69%, 1)"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 1 
            <span
              class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  gxbKGz"
              data-blade-component="code"
            >
              <code
                class="StyledBaseText-dVBfTO edQJln"
                data-blade-component="base-text"
              >
                Google
              </code>
            </span>
          </p>
        </div>
      </li>
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  bALAZM"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx gXoKZy"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(214, 18%, 69%, 1)"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render List with inline ListItemText 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ul
      class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu erLmOF"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  bALAZM"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx gXoKZy"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(214, 18%, 69%, 1)"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            <p
              class="StyledBaseText-dVBfTO gplEcU"
              data-blade-component="text"
            >
              Level 1
            </p>
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render medium ordered List 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ol
      class="OrderedListweb__OrderedList-sc-1edjn7i-0 List__StyledOrderedList-bqf6r7-0 bAfLWR fvrmRj"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx iZdzKK"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO ktUwvA"
              data-blade-component="text"
            >
              1.
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <ul
            class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
            data-blade-component="list"
            role="list"
          >
            <li
              class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
              data-blade-component="list-item"
            >
              <div
                class="BaseBox-bmPWx dKbTtw"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx gXoKZy"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(214, 18%, 69%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class="BaseBox-bmPWx"
                data-blade-component="base-box"
              >
                <ul
                  class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
                    data-blade-component="list-item"
                  >
                    <div
                      class="BaseBox-bmPWx dKbTtw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx gXoKZy"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(214, 18%, 69%, 1)"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="StyledBaseText-dVBfTO eIdQFo"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render medium ordered-filled List 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ol
      class="OrderedListweb__OrderedList-sc-1edjn7i-0 List__StyledOrderedList-bqf6r7-0 bAfLWR fvrmRj"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bquAKR"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO jVmQdG"
              data-blade-component="text"
            >
              1
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
      </li>
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bquAKR"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO jVmQdG"
              data-blade-component="text"
            >
              2
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bquAKR"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO jVmQdG"
              data-blade-component="text"
            >
              3
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 3
          </p>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render medium unordered List with icon 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ul
      class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu erLmOF"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx joTyKb"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M14.707 5.293a1 1 0 1 0-1.414 1.414L17.586 11H4a1 1 0 1 0 0 2h13.586l-4.293 4.293a1 1 0 0 0 1.414 1.414l6-6a1 1 0 0 0 0-1.414l-6-6Z"
                data-blade-component="svg-path"
                fill="hsla(217, 18%, 45%, 1)"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO eIdQFo"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <ul
            class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
            data-blade-component="list"
            role="list"
          >
            <li
              class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
              data-blade-component="list-item"
            >
              <div
                class="BaseBox-bmPWx dKbTtw"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx joTyKb"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      d="M12.707 3.293a1 1 0 0 0-1.414 0l-6 6a1 1 0 0 0 1.414 1.414L11 6.414V20a1 1 0 1 0 2 0V6.414l4.293 4.293a1 1 0 0 0 1.414-1.414l-6-6Z"
                      data-blade-component="svg-path"
                      fill="hsla(217, 18%, 45%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class="BaseBox-bmPWx"
                data-blade-component="base-box"
              >
                <ul
                  class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
                    data-blade-component="list-item"
                  >
                    <div
                      class="BaseBox-bmPWx dKbTtw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx gXoKZy"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(214, 18%, 69%, 1)"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="StyledBaseText-dVBfTO eIdQFo"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render small ordered List 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ol
      class="OrderedListweb__OrderedList-sc-1edjn7i-0 List__StyledOrderedList-bqf6r7-0 bAfLWR fvrmRj"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx dtecFy"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gOAMqV"
              data-blade-component="text"
            >
              1.
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO fedBF"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <ul
            class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
            data-blade-component="list"
            role="list"
          >
            <li
              class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
              data-blade-component="list-item"
            >
              <div
                class="BaseBox-bmPWx dKbTtw"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx cfjjOL"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(214, 18%, 69%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="StyledBaseText-dVBfTO fedBF"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class="BaseBox-bmPWx"
                data-blade-component="base-box"
              >
                <ul
                  class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
                    data-blade-component="list-item"
                  >
                    <div
                      class="BaseBox-bmPWx dKbTtw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx cfjjOL"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(214, 18%, 69%, 1)"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="StyledBaseText-dVBfTO fedBF"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render small ordered-filled List 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ol
      class="OrderedListweb__OrderedList-sc-1edjn7i-0 List__StyledOrderedList-bqf6r7-0 bAfLWR fvrmRj"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx iHTRtp"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO jVmQdG"
              data-blade-component="text"
            >
              1
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO fedBF"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
      </li>
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx iHTRtp"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO jVmQdG"
              data-blade-component="text"
            >
              2
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO fedBF"
            data-blade-component="text"
          >
            Level 2
          </p>
        </div>
      </li>
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx iHTRtp"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO jVmQdG"
              data-blade-component="text"
            >
              3
            </p>
          </div>
          <p
            class="StyledBaseText-dVBfTO fedBF"
            data-blade-component="text"
          >
            Level 3
          </p>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<List /> should render small unordered List with icon 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ul
      class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu erLmOF"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  dWYlpY"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx lkpHah"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="12px"
              viewBox="0 0 24 24"
              width="12px"
            >
              <path
                d="M14.707 5.293a1 1 0 1 0-1.414 1.414L17.586 11H4a1 1 0 1 0 0 2h13.586l-4.293 4.293a1 1 0 0 0 1.414 1.414l6-6a1 1 0 0 0 0-1.414l-6-6Z"
                data-blade-component="svg-path"
                fill="hsla(217, 18%, 45%, 1)"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO fedBF"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <ul
            class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
            data-blade-component="list"
            role="list"
          >
            <li
              class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
              data-blade-component="list-item"
            >
              <div
                class="BaseBox-bmPWx dKbTtw"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx lkpHah"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="12px"
                    viewBox="0 0 24 24"
                    width="12px"
                  >
                    <path
                      d="M12.707 3.293a1 1 0 0 0-1.414 0l-6 6a1 1 0 0 0 1.414 1.414L11 6.414V20a1 1 0 1 0 2 0V6.414l4.293 4.293a1 1 0 0 0 1.414-1.414l-6-6Z"
                      data-blade-component="svg-path"
                      fill="hsla(217, 18%, 45%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="StyledBaseText-dVBfTO fedBF"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class="BaseBox-bmPWx"
                data-blade-component="base-box"
              >
                <ul
                  class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
                    data-blade-component="list-item"
                  >
                    <div
                      class="BaseBox-bmPWx dKbTtw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx cfjjOL"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(214, 18%, 69%, 1)"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="StyledBaseText-dVBfTO fedBF"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<List /> should render unordered List of small size 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <ul
      class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu erLmOF"
      data-blade-component="list"
      role="list"
    >
      <li
        class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  bALAZM"
        data-blade-component="list-item"
      >
        <div
          class="BaseBox-bmPWx dKbTtw"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx cfjjOL"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="6px"
              viewBox="0 0 6 6"
              width="6px"
            >
              <circle
                cx="3px"
                cy="3px"
                data-blade-component="svg-circle"
                fill="hsla(214, 18%, 69%, 1)"
                r="3px"
              />
            </svg>
          </div>
          <p
            class="StyledBaseText-dVBfTO fedBF"
            data-blade-component="text"
          >
            Level 1
          </p>
        </div>
        <div
          class="BaseBox-bmPWx"
          data-blade-component="base-box"
        >
          <ul
            class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
            data-blade-component="list"
            role="list"
          >
            <li
              class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
              data-blade-component="list-item"
            >
              <div
                class="BaseBox-bmPWx dKbTtw"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx cfjjOL"
                  data-blade-component="base-box"
                >
                  <svg
                    aria-hidden="true"
                    class="Svgweb__StyledSvg-vcmjs8-0"
                    data-blade-component="icon"
                    fill="none"
                    height="6px"
                    viewBox="0 0 6 6"
                    width="6px"
                  >
                    <circle
                      cx="3px"
                      cy="3px"
                      data-blade-component="svg-circle"
                      r="2.5px"
                      stroke="hsla(214, 18%, 69%, 1)"
                    />
                  </svg>
                </div>
                <p
                  class="StyledBaseText-dVBfTO fedBF"
                  data-blade-component="text"
                >
                  Level 2
                </p>
              </div>
              <div
                class="BaseBox-bmPWx"
                data-blade-component="base-box"
              >
                <ul
                  class="UnorderedListweb__UnorderedList-sc-1tb6ajo-0 List__StyledUnorderedList-bqf6r7-1 dbSpGu"
                  data-blade-component="list"
                  role="list"
                >
                  <li
                    class="ListItemElementweb__ListItemElement-sc-2pr284-0 ListItem__StyledListItem-sc-6bxu4b-0  hWTYHD"
                    data-blade-component="list-item"
                  >
                    <div
                      class="BaseBox-bmPWx dKbTtw"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx cfjjOL"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="6px"
                          viewBox="0 0 6 6"
                          width="6px"
                        >
                          <rect
                            data-blade-component="svg-rect"
                            fill="hsla(214, 18%, 69%, 1)"
                            height="6px"
                            rx="1px"
                            width="6px"
                          />
                        </svg>
                      </div>
                      <p
                        class="StyledBaseText-dVBfTO fedBF"
                        data-blade-component="text"
                      >
                        Level 3
                      </p>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
